test/crashers/fdf869e9ed9aaa0aeb71d6582aa87195ba717dc3.output
panic: runtime error: index out of range [1] with length 1

goroutine 1 [running]:
github.com/strangelove-ventures/packet-forward-middleware/router.ParseIncomingTransferField({0xc00003e990, 0x2f})
	/home/anon/go/src/github.com/strangelove-ventures/packet-forward-middleware/router/module.go:298 +0x4c5
github.com/strangelove-ventures/packet-forward-middleware/test.Fuzz({0x7fb3da4fd000, 0x6a2da9b16304, 0x0})
	/home/anon/go/src/github.com/strangelove-ventures/packet-forward-middleware/test/test_parser.go:8 +0x4a
go-fuzz-dep.Main({0xc000cdff68, 0x1, 0x121c7a0})
	go-fuzz-dep/main.go:36 +0x15b
main.main()
	github.com/strangelove-ventures/packet-forward-middleware/test/go.fuzz.main/main.go:15 +0x3b

goroutine 37 [IO wait]:
internal/poll.runtime_pollWait(0x7fb3db7e8650, 0x72)
	runtime/netpoll.go:229 +0x89
internal/poll.(*pollDesc).wait(0xc0006dc100, 0xc0004f69c0, 0x58)
	/usr/lib/go/src/internal/poll/fd_poll_runtime.go:84 +0xbd
internal/poll.(*pollDesc).waitRead(...)
	/usr/lib/go/src/internal/poll/fd_poll_runtime.go:89
internal/poll.(*FD).ReadMsg(0xc0006dc100, {0xc0004f69c0, 0x10, 0x10}, {0xc000d40020, 0x1000, 0x1000}, 0x1)
	/usr/lib/go/src/internal/poll/fd_unix.go:250 +0x4d0
net.(*netFD).readMsg(0xc0006dc100, {0xc0004f69c0, 0x16005e0, 0x1}, {0xc000d40020, 0x0, 0xc}, 0x1dcbf98)
	/usr/lib/go/src/net/fd_posix.go:68 +0x52
net.(*UnixConn).readMsg(0xc00048c320, {0xc0004f69c0, 0x40e934, 0x15d5420}, {0xc000d40020, 0x80, 0x7f})
	/usr/lib/go/src/net/unixsock_posix.go:116 +0x6a
net.(*UnixConn).ReadMsgUnix(0xc00048c320, {0xc0004f69c0, 0x40e934, 0x7fb4196daa68}, {0xc000d40020, 0x0, 0x0})
	/usr/lib/go/src/net/unixsock.go:143 +0xc6
github.com/godbus/dbus.(*oobReader).Read(0xc000d40000, {0xc0004f69c0, 0xc000d4be20, 0x40ec87})
	/home/anon/go/pkg/mod/github.com/godbus/dbus@v0.0.0-20190726142602-4481cbc300e2/transport_unix.go:21 +0x5d
io.ReadAtLeast({0x15d5860, 0xc000d40000}, {0xc0004f69c0, 0x10, 0x10}, 0x10)
	/usr/lib/go/src/io/io.go:328 +0x104
io.ReadFull(...)
	/usr/lib/go/src/io/io.go:347
github.com/godbus/dbus.(*unixTransport).ReadMessage(0xc0006b8408)
	/home/anon/go/pkg/mod/github.com/godbus/dbus@v0.0.0-20190726142602-4481cbc300e2/transport_unix.go:91 +0x1a5
github.com/godbus/dbus.(*Conn).inWorker(0xc0001523f0)
	/home/anon/go/pkg/mod/github.com/godbus/dbus@v0.0.0-20190726142602-4481cbc300e2/conn.go:294 +0x6b
created by github.com/godbus/dbus.(*Conn).Auth
	/home/anon/go/pkg/mod/github.com/godbus/dbus@v0.0.0-20190726142602-4481cbc300e2/auth.go:118 +0xd65
exit status 2